<resources>
    <string name="app_name">helioApp</string>
    <string name="tv_welcome">Welcome to 👋</string>
    <string name="btn_next">Next</string>
    <string name="tv_subtitle">The best hotel booking in this century to accompany your vacation</string>
    <string name="header_one"><![CDATA[Travel safely, comfortably, & easily]]></string>
    <string name="subHeader">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="header_two">Find the best hotels for your vacation</string>
    <string name="header_three">Let’s discover the world with us</string>
    <string name="toast_last_page">It is the Last Page</string>
    <string name="tv_helia">Helia</string>
    <string name="btn_skip">Skip</string>
    <string name="tv_lets_sign_you_in">Let’s you in</string>
    <string name="tv_continue_with_facebook">Continue with Facebook</string>
    <string name="tv_continue_with_google">Continue with Google</string>
    <string name="tv_continue_with_apple">Continue with Apple</string>
    <string name="tv_or">or</string>
    <string name="btn_sign_in_with_password">Sign in with password</string>
    <string name="tv_don_t_have_an_account">Don’t have an account? Sign up</string>
    <string name="tv_sign_up">Sign up</string>
    <string name="toast_facebook_btn">FaceBook button clicked</string>
    <string name="toast_apple_btn">Apple button clicked</string>
    <string name="toast_google_btn">Google button clicked</string>
    <string name="tv_create_your_account">Create your Account</string>
    <string name="editText_email">Email</string>
    <string name="tv_checkbox_remember_me">Remember me</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="tv_or_continue_with">or continue with</string>
    <string name="tv_already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="hint_password">Password</string>
    <string name="tv_login_to_your_account">Login to your Account</string>
    <string name="btn_forgot_the_password">Forgot the password?</string>
    <string name="toast_email_is_valid">Email is Valid</string>
    <string name="toast_email_not_empty">Email Field is not Empty</string>
    <string name="toast_email_empty">Email Field is Empty</string>
    <string name="toast_password_invalid">Password is Invalid</string>
    <string name="toast_password_valid">Password is Valid</string>
    <string name="toast_email_valid">Email is Valid</string>
    <string name="toast_email_not_valid">Email is Not Valid</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="toolbar_title_forgot_password">Forgot Password</string>
    <string name="tv_select_which_contact_details_should_we_use_to_reset_your_password">Select which contact details should we use to reset your password</string>
    <string name="tv_via_sms">via SMS:</string>
    <string name="tv__1_111_99">+1 111 ******99</string>
    <string name="tv_via_email">via Email:</string>
    <string name="tv_dan_in_yourdomain_com">dan***in@yourdomain.com</string>
    <string name="btn_go_ahead">Go Ahead</string>
    <string name="btn_continue">Continue</string>
    <string name="tv_code_has_been_send_to_1_111_99">Code has been send to +1 111 ******99</string>
    <string name="tv_resend_code_in_53_s">Resend code in %s s</string>
    <string name="btn_verify">Verify</string>
    <string name="toolbar_create_new_password">Create New Password</string>
    <string name="tv_create_your_new_password">Create Your New Password</string>
    <string name="tv_congratulations">Congratulations!</string>
    <string name="tv_your_account_is_ready_to_use">Your account is ready to use</string>
    <string name="btn_go_to_homepage">Go to Homepage</string>
    <string name="tv_resend_code">\"Resend code in \"</string>
    <string name="tv_s">s</string>
    <string name="tv_send_code_again">Resend Code Again</string>
    <string name="toast_create_password_valid">Create Password is Valid</string>
    <string name="toast_create_password_invalid">Create Password is Invalid</string>
    <string name="toast_confirm_password_valid">Confirm Password is Valid</string>
    <string name="toast_confirm_password_invalid">Confirm Password is InValid</string>
    <string name="toast_password_does_not_matches">Password Does not Matches</string>
    <string name="tv_hello_daniel">Hello, Daniel 👋</string>
    <string name="hint_search">Search</string>
    <string name="chip_recommended">Recommended</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="booking">Booking</string>
    <string name="profile">Profile</string>
    <string name="tv_trending_chip">Trending</string>
    <string name="tv_popular_chip">Popular</string>
    <string name="tv_nearby_chip">Nearby</string>
    <string name="tv_emeralda_de_hotel">Emeralda De Hotel</string>
    <string name="tv_president_hotel">President Hotel</string>
    <string name="tv_paris_france">Paris, France</string>
    <string name="tv_recently_booked">Recently Booked</string>
    <string name="tv_see_all">See All</string>
    <string name="tv_night">/ night</string>
    <string name="toast_credential_invalid">Creadential is Not Valid</string>
    <string name="toast_password_empty">Password is Empty</string>
    <string name="user_create">User Created</string>
    <string name="user_not_created">User Not Created</string>
    <string name="name_initial_value">Test123</string>
    <string name="login_not_successfull">Login Not Successfull</string>
    <string name="tv_please_wait">Please Wait</string>
    <string name="login_successfully">Login Succesfull</string>
    <string name="valid_credentials">Your Credentials is Valid</string>
    <string name="btn_logout">Logout</string>
    <string name="toast_enter_otp">Enter Valid OTP</string>
    <string name="msg_token">\"Token : \"</string>
    <string name="btn_get_notification">Get Notification</string>
    <string name="btn_snooze">Snooze</string>
    <string name="lbl_please_reply">Please Reply</string>
    <string name="tv_still_notification_s_reply_has_not_arrived">Still Notification\'s Reply has not arrived</string>
    <string name="btn_progress_notification">Progress Notification</string>
    <string name="btn_expanded_notification">Expanded Notification</string>
    <string name="btn_group_notification">Group Notification</string>
    <string name="longText">Its Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this NotificationIts Expanded Notification So It Will be Expanded on Swiping Down this Notification</string>
    <string name="title_dowload_in_progress">Picture Download in Progress</string>
    <string name="text_downloading">Downloading</string>
    <string name="text_download_complete">Download complete</string>
</resources>