<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home_screen.HomeScreenActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:layout_marginTop="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageBookmark">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImageView"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:src="@drawable/ic_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/tv_helia"
            android:textColor="@color/grayscale_900"
            android:textSize="@dimen/_20ssp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageNotification"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBookmark"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:src="@drawable/ic_notification"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toStartOf="@id/imageNotification"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewHelloUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_18sdp"
        android:fontFamily="@font/urbanist_bold"
        android:textColor="@color/grayscale_900"
        android:text="@string/tv_hello_daniel"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_18sdp"
        app:layout_constraintTop_toBottomOf="@id/textViewHelloUser"
        app:layout_constraintStart_toStartOf="@id/textViewHelloUser"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_search_bar"
        app:queryHint="@string/hint_search"
        app:searchIcon="@drawable/ic_search"
        app:searchHintIcon="@drawable/ic_search"
        app:iconifiedByDefault="false"
        app:queryBackground="@android:color/transparent"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageBtnFilter"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:src="@drawable/ic_filter"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/searchBar"
        app:layout_constraintBottom_toBottomOf="@id/searchBar"
        app:layout_constraintEnd_toEndOf="@id/searchBar"/>

    <HorizontalScrollView
        android:id="@+id/horizontal_scrollview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="@id/textViewHelloUser"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="@dimen/_18sdp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/recommendChip"
                    style="@style/CustomChipset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/chip_recommended" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/popularChip"
                    style="@style/CustomChipset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_popular_chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/trendingChip"
                    style="@style/CustomChipset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_trending_chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/nearbyChip"
                    style="@style/CustomChipset"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nearby_chip" />
            </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Recently Booked"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewHotelImages"
        app:layout_constraintStart_toStartOf="@id/recyclerViewHotelImages"

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHotelImages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_19sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/textViewHelloUser"
        app:layout_constraintTop_toBottomOf="@id/horizontal_scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRecentlyBooked"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_19sdp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/textViewHelloUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>