<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_24sdp"
        android:src="@drawable/ic_alert_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewCongrats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_24sdp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/tv_congratulations"
        android:textAlignment="center"
        android:textColor="@color/primary_500"
        android:textSize="@dimen/_19ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewAlert" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSubHeaderDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_11sdp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/tv_your_account_is_ready_to_use"
        android:textAlignment="center"
        android:textColor="@color/grayscale_900"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@id/textViewCongrats"
        app:layout_constraintStart_toStartOf="@id/textViewCongrats"
        app:layout_constraintTop_toBottomOf="@id/textViewCongrats" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoToHomepage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_29sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/rounded_filled_button"
        android:fontFamily="@font/urbanist_bold"
        android:padding="@dimen/_10sdp"
        android:shadowColor="@color/primary_500"
        android:shadowDx="4"
        android:shadowDy="12"
        android:text="@string/btn_go_to_homepage"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textViewCongrats"
        app:layout_constraintStart_toStartOf="@id/textViewCongrats"
        app:layout_constraintTop_toBottomOf="@id/textViewSubHeaderDialog" />


</androidx.constraintlayout.widget.ConstraintLayout>